--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files (ignore local secrets, but allow example template)
+.env.local
+.env.development
+.env.production
+!.env.example  # Allow this file to guide other developers
 
 # vercel
 .vercel
