--- a/vercel.json
+++ b/vercel.json
@@ -32,5 +32,11 @@
   ],
   "env": {
     "NEXT_PUBLIC_API_URL": "https://api.your-domain.com"
-  }
+  },
+  "builds": [
+    {
+      "src": "api/**/*.php",
+      "use": "@vercel/php"
+    }
+  ]
 }
