--- a/vercel.json
+++ b/vercel.json
@@ -33,10 +33,9 @@
   "env": {
     "NEXT_PUBLIC_API_URL": "https://api.your-domain.com"
   },
-  "builds": [
-    {
-      "src": "api/**/*.php",
-      "use": "@vercel/php"
+  "functions": {
+    "api/**/*.php": {
+      "runtime": "vercel-php@0.7.3"
     }
-  ]
+  }
 }
