--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies": "^0.9.1",
     "next": "15.2.4",
     "pg": "^8.16.0",
     "react": "^19.0.0",
