--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,11 @@
       "schedule": "0 0 * * *"
     }
   ],
+  "functions": {
+    "api/info.php": {
+      "runtime": "vercel-php@0.6.0"
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
