--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,8 @@
   ],
   "functions": {
     "api/info.php": {
-      "runtime": "vercel-php@0.6.0"
+      "runtime": "vercel-php@0.6.0",
+      "source": "api/info.php"
     }
   },
   "headers": [
