--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,7 @@
   ],
   "functions": {
     "api/info.php": {
-      "runtime": "vercel-php@0.6.0",
-      "source": "api/info.php"
+      "runtime": "vercel-php@0.6.0"
     }
   },
   "headers": [
